rename to investeck

--- a/js/ui/android/app/src/main/res/values/strings.xml
+++ b/js/ui/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">bartr</string>
+    <string name="app_name">investreck</string>
     <string name="fb_app_id">268075730303260</string>
     <string name="fb_login_protocol_scheme">fb268075730303260</string>
 </resources>
