add documtation explaining the metrics

--- a/README
+++ b/README
@@ -3,3 +3,40 @@ A Investreck app
 Running React-Native
   - Make sure es2015 preset is not preset
 
+Metrics Definition:
+
+Holdings
+===
+The number of assets you currently possess. For example, if I buy 5 BTC holdings would be 5
+
+Total Cash
+===
+The total amount you earned by selling your assets. For example, if I bought 5 BTC and then sold 3 BTC at a price of £4
+then the cash is £12. If I then re-invest the £12 then I still have £12 total cash although I don' pocess that amount any more.
+Essentially,
+
+`Total Cash = Sum of sells`
+
+Total Amount Invested
+===
+The total amount that has been used to buy assets.
+
+`Total Amount Invested = Sum of buys`
+
+Exposure
+===
+`Total Amount Invested - Total Cash`
+
+Current Value (Portfolio Value)
+===
+Total value of the given asset. For example, if I have 5 BTC and the current price is £10 then the current value of BTC in my pocession is equal to £50
+
+`Current Value = Holdings * Current Price`
+
+Safe Sell Price
+===
+The price which if we sell all the holding will be equal to our exposure. Essentially, it indicates the price at which our gains and losses will equal to 0;
+
+Capital Growth
+===
+`Capital Growth = currentValue - exposure`
